September 2005

Removed the DisplayTree item from the main menubar; added a "Show
DisplayTree" item to the bottom of the Display menu.

When a new display is opened, its initial variables are now chosen
based on the variables displayed in the display that was current when
the new one was initialized.

Added alt-t/p accelerators to toggle between persistent and transient
brushing; transient brush now drawn as a dotted line.

Corrected a bug in the behavior of the "linkby" notebook on the
brushing panel, and improved its behavior (I hope) so that only the
relevant tab in the notebook is sensitive for each display.

Split the ViewMode menu into a View menu (representing projection),
as needed, and an Interaction menu.  This involved changes to over 60
files.


July 2005

Fixed a bug in linking brushing by variable that was causing the wrong
variable to be designated the linking variable.

Fixed a (very recent) bug in the GraphLayout and ggvis plugins which
caused new windows to be imperfectly linked to the brethren.

Added new graphviz layout algorithms to the GraphLayout plugin.


New signal added for the creation of a new displayd object. This is
emitted after the display is fully constructed and is being
registered.  We will miss a display if it is constructed separately
and not explicitly added to the collection of known displays.  But
that currently never happens and will be rare even when we instantiate
the classes outside of the ggobi control panel, e.g. in RGtk.


The 'PlotMenu' plug-in provides the infrastructure for adding
pop-menus for splot's, i.e. panels on displays.  These are potentially
contentious, but are convenient at least for sophisticated users. As
plugins, they work well as an optional add-on.  We can add
functionality to this module and splot's as desired.


Drag and drop for parallel coordinates displays.  One can drag a
"panel" onto another panel and currently they get swapped in position.