@@ -71,91 +71,11 @@ cotour_option_items_add (ggobid *gg) {
     gg->tourcorr.fade_vars, gg);
 }
 
-/*--------------------------------------------------------------------*/
-/*                   Scaling: Reset and Options menus                 */
-/*--------------------------------------------------------------------*/
-
-void
-scale_reset_items_add(ggobid *gg) {
-  void pan_reset_cb (GtkWidget *w, ggobid *gg);
-  void zoom_reset_cb (GtkWidget *w, ggobid *gg);
-  GtkWidget *item;
-
-  item = gtk_menu_item_new_with_label ("Reset pan");
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (pan_reset_cb),
-                      (gpointer) gg);
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Reset zoom");
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (zoom_reset_cb),
-                      (gpointer) gg);
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-}
 
 /*--------------------------------------------------------------------*/
-/*               Brushing: Reset and Options menus                    */
+/*               Brushing: Options menus                              */
 /*--------------------------------------------------------------------*/
 
-void
-brush_reset_items_add (ggobid *gg)
-{
-  GtkWidget *item;
-
-/*
-   Adding include/exclude for points; do I need to add menu items
-   for the edges as well?  -- dfs
-*/
-  item = gtk_menu_item_new_with_label ("Exclude shadowed points in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_EXCLUDE_SHADOW_POINTS));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Include shadowed points in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_INCLUDE_SHADOW_POINTS));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Un-shadow all points in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_UNSHADOW_POINTS));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Exclude shadowed edges in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_EXCLUDE_SHADOW_EDGES));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Include shadowed edges in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_INCLUDE_SHADOW_EDGES));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Un-shadow all edges in current display");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_UNSHADOW_EDGES));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-
-  item = gtk_menu_item_new_with_label ("Reset brush size");
-  GGobi_widget_set (item, gg, true);
-  gtk_signal_connect (GTK_OBJECT (item), "activate",
-                      GTK_SIGNAL_FUNC (brush_reset_cb),
-                      (gpointer) GINT_TO_POINTER (RESET_INIT_BRUSH));
-  gtk_menu_append (GTK_MENU (gg->menus.reset_menu), item);
-}
 
 void
 brush_option_items_add(ggobid *gg)
@@ -173,18 +93,11 @@ brush_option_items_add(ggobid *gg)
 /*               Routines to manage the mode menus                    */
 /*--------------------------------------------------------------------*/
 
-gboolean
-imode_has_reset_menu (InteractionMode imode)
-{
-  return (imode == SCALE  || imode == BRUSH);
-}
-
 /*-- make the menu items once, and then show/hide them as necessary --*/
 void
 main_miscmenus_initialize (ggobid *gg)
 {
   gg->menus.options_item = NULL;
-  gg->menus.reset_item = NULL;
 }
 
 void
@@ -235,44 +148,6 @@ main_options_menu_update (ProjectionMode pmode_prev, InteractionMode imode_prev,
     gg->menus.options_menu);
 
 }
-void
-main_reset_menu_update (ProjectionMode pmode_prev, InteractionMode imode_prev, displayd *prev_display, ggobid *gg)
-{
-  InteractionMode imode = imode_get (gg);
-
-  /* if the previous menu had a reset menu ... */
-  if (imode_has_reset_menu (imode_prev) && gg->menus.reset_item) {
-    gtk_menu_item_remove_submenu (GTK_MENU_ITEM (gg->menus.reset_item));
-    if (!imode_has_reset_menu (imode)) {
-      if (gg->menus.reset_item != NULL) {
-        gtk_widget_destroy (gg->menus.reset_item);
-        gg->menus.reset_item = NULL;
-      }
-    }
-  } else { /* else if it didn't ... */
-    if (imode_has_reset_menu (imode) && gg->menus.reset_item == NULL) {
-      gg->menus.reset_item = submenu_make ("_Reset", 'R',
-        gg->main_accel_group);
-      submenu_insert (gg->menus.reset_item,
-        gg->main_menubar, 5);
-    } 
-  }
-
-  /* If the new mode has a reset menu, build it */
-  if (imode_has_reset_menu(imode)) {
-    gg->menus.reset_menu = gtk_menu_new ();
-
-    if (imode == BRUSH) {
-      brush_reset_items_add (gg);
-    } else if (imode == SCALE) {
-      scale_reset_items_add (gg);
-    }
-
-    gtk_widget_show_all (gg->menus.reset_menu);
-    gtk_menu_item_set_submenu (GTK_MENU_ITEM (gg->menus.reset_item),
-     gg->menus.reset_menu);
-  }
-}
 
 void
 main_miscmenus_update (ProjectionMode pmode_prev, InteractionMode imode_prev, displayd *prev_display,
@@ -285,11 +160,9 @@ call class-specific menus to rebuild them.
   */
 
   main_options_menu_update(pmode_prev, imode_prev, prev_display, gg);
-  main_reset_menu_update(pmode_prev, imode_prev, prev_display, gg);
 
   /*
   Should use instead klass->option_items_add() which does nothing,
-  and maybe klass->reset_items_add() as well.
   if (pmode == EXTENDED_DISPLAY_MODE && imode == DEFAULT) {
       displayd *dpy = gg->current_display;
       if(GTK_IS_GGOBI_EXTENDED_DISPLAY(dpy)) {
@@ -302,3 +175,129 @@ call class-specific menus to rebuild them.
 
 }
 
+/*------------------- imode menus (reset items, to start) ---------------------*/
+
+void
+brush_display_imode_items_add (GtkWidget *menu, ggobid *gg)
+{
+  GtkWidget *item;
+
+/*
+   Adding include/exclude for points; do I need to add menu items
+   for the edges as well?  -- dfs
+*/
+  item = gtk_menu_item_new_with_label ("Exclude shadowed points");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_EXCLUDE_SHADOW_POINTS));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Include shadowed points");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_INCLUDE_SHADOW_POINTS));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Un-shadow all points");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_UNSHADOW_POINTS));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Exclude shadowed edges");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_EXCLUDE_SHADOW_EDGES));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Include shadowed edges");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_INCLUDE_SHADOW_EDGES));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Un-shadow all edges");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_UNSHADOW_EDGES));
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Reset brush size");
+  GGobi_widget_set (item, gg, true);
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (brush_reset_cb),
+                      (gpointer) GINT_TO_POINTER (RESET_INIT_BRUSH));
+  gtk_menu_append (GTK_MENU (menu), item);
+}
+
+void
+scale_display_imode_items_add (GtkWidget *menu, ggobid *gg) {
+  void pan_reset_cb (GtkWidget *w, ggobid *gg);
+  void zoom_reset_cb (GtkWidget *w, ggobid *gg);
+  GtkWidget *item;
+
+  item = gtk_menu_item_new_with_label ("Reset pan");
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (pan_reset_cb),
+                      (gpointer) gg);
+  gtk_menu_append (GTK_MENU (menu), item);
+
+  item = gtk_menu_item_new_with_label ("Reset zoom");
+  gtk_signal_connect (GTK_OBJECT (item), "activate",
+                      GTK_SIGNAL_FUNC (zoom_reset_cb),
+                      (gpointer) gg);
+  gtk_menu_append (GTK_MENU (menu), item);
+}
+
+gboolean
+imode_has_display_menu (InteractionMode imode)
+{
+  return (imode == SCALE  || imode == BRUSH);
+}
+
+void
+display_imode_menu_update (ProjectionMode pmode_prev, InteractionMode imode_prev, 
+  displayd *display, ggobid *gg)
+{
+  /* ProjectionMode pmode = display->cpanel.pmode; -- not used yet */
+  InteractionMode imode = display->cpanel.imode; 
+  /* or imode_get (gg) */
+
+  if (imode == imode_prev)
+/**/return;
+
+  /* Remove any existing imode submenu */
+  if (imode_has_display_menu(imode_prev) && display->imode_item) {
+    gtk_menu_item_remove_submenu (GTK_MENU_ITEM (display->imode_item));
+    gtk_widget_destroy (display->imode_item);
+    display->imode_item = NULL;
+  }
+
+  /* If the new mode has a reset menu, build it */
+  if (imode_has_display_menu (imode)) {
+    GtkWidget *imode_menu;
+    /* GtkAccelGroup *accel_group = gtk_accel_group_new(); not yet ...*/
+
+    display->imode_item = gtk_menu_item_new_with_label ((gchar *)GGOBI(getIModeName)(imode));
+    gtk_widget_show (display->imode_item);
+    submenu_insert (display->imode_item, display->menubar, 1);
+
+    imode_menu = gtk_menu_new ();
+
+    if (imode == BRUSH) {
+      brush_display_imode_items_add (imode_menu, gg);
+    } else if (imode == SCALE) {
+      scale_display_imode_items_add (imode_menu, gg);
+    }
+
+    gtk_widget_show_all (imode_menu);
+    gtk_menu_item_set_submenu (GTK_MENU_ITEM (display->imode_item), imode_menu);
+  }
+
+}
